[package]
name = "chain_reaction"
version = "0.1.0"
edition = "2024"
license = "MIT"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.16.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
hexx = { version = "0.20.0", features = ["bevy_reflect"] }
rand = "0.9.1"
